--- a/springclouddemo/gateway/src/main/resources/bootstrap.yml
+++ b/springclouddemo/gateway/src/main/resources/bootstrap.yml
@@ -26,15 +26,15 @@ spring:
         server-addr: ${NACOS_SERVER}
         username: nacos
         password: zxc111
-    gateway:
+    gateway: #可以放在nacos中做动态配置
       discovery:
           locator:
             enabled: true
             lower-case-service-id: true
 #      routes:
-#        - id: orderservice
-#          uri: lb://orderservice
+#        - id: bd
+#          uri: https://www.baidu.com/
 #          predicates:
-#            - Path=/orderservice/**
+#            - Path=/bd/**
 #          filters:
 #            - StripPrefix=1
