--- a/springclouddemo/gateway/src/main/resources/bootstrap.yml
+++ b/springclouddemo/gateway/src/main/resources/bootstrap.yml
@@ -7,12 +7,12 @@ spring:
   profiles:
     active: ${ENV_PROFILE:dev}
   application:
-    name: @project.artifactId@
+    name: '@project.artifactId@'
   cloud:
     nacos:
       config:
         enabled: true
-        server-addr: ${NACOS_SERVER}
+        server-addr: ${NACOS_SERVER:isawesome.cn:8848}
         username: nacos
         password: zxc111
         file-extension: yaml
@@ -23,18 +23,24 @@ spring:
             refresh: true
       discovery:
         enabled: true
-        server-addr: ${NACOS_SERVER}
+        server-addr: ${NACOS_SERVER:isawesome.cn:8848}
         username: nacos
         password: zxc111
     gateway: #可以放在nacos中做动态配置
       discovery:
-          locator:
-            enabled: true
-            lower-case-service-id: true
-#      routes:
-#        - id: bd
-#          uri: https://www.baidu.com/
-#          predicates:
-#            - Path=/bd/**
-#          filters:
-#            - StripPrefix=1
+        locator:
+          enabled: true
+          lower-case-service-id: true
+      routes:
+        - id: bd
+          uri: https://www.baidu.com/
+          predicates:
+            - Path=/bd/**
+          filters:
+            - StripPrefix=1
+        - id: order-service
+          uri: lb://order-service #lb:使用loadBalanceClient实现负载均衡，后面users是微服务的名称[应用于集群环境]
+          predicates:
+            - Path=/orderService/** # 直接nginx80端口代理gateway,减少每一个配置,需要前端统一请求ip,gateway和nginx 80端口冲突,暂时先不改
+          filters:
+            - StripPrefix=1
