--- a/springclouddemo/order-service/src/main/resources/bootstrap.yml
+++ b/springclouddemo/order-service/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
         server-addr: ${NACOS_SERVER:isawesome.cn:8848}
         username: nacos
         password: zxc111
-        file-extension: yaml
+        file-extension: yml
         shared-configs:
           - data-id: application.yaml
             refresh: true
