--- a/springclouddemo/parent/pom.xml
+++ b/springclouddemo/parent/pom.xml
@@ -33,6 +33,7 @@
                 <directory>${basedir}/src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
+                    <include>**/*.xml</include>
                     <include>**/application*.yml</include>
                     <include>**/application*.yaml</include>
                     <include>**/application*.properties</include>
