--- a/springclouddemo/order-service/pom.xml
+++ b/springclouddemo/order-service/pom.xml
@@ -16,6 +16,14 @@
         <relativePath/>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>ticket-service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
